--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.datasource.url = jdbc:mysql://localhost:3306/empdb
 spring.datasource.username = root
 spring.datasource.password = root
 
+# hibernate properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+server.port=8081
+
