configured employee-service with eureka client

--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 server.port=8081
 
+# Eureka config
+spring.application.name=EMPLOYEE-SERVICE
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
