--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 server.port=9091
 
-
+# Eureka config
+spring.application.name=DEPARTMENT-SERVICE
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
