running multiple instances

--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 server.port=9091
+# to deploye the services to multiple instance use the below command
+#java -jar -Dserver.port=<PORT_NUMBER> <JAR_NAME>
 
 # Eureka config
 spring.application.name=DEPARTMENT-SERVICE
