--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=1111
-spring.application.name=DEPARTMENT-SERVICE
+spring.application.name=API-GATEWAY
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+management.endpoints.web.exposure.include=*
