added centralized configuration

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 spring.application.name=CONFIG-SERVER
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8888
+
+# git repository details for centralized config
+spring.cloud.config.server.git.uri=https://github.com/parmendra05/config-server-repositoy
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
