--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,17 +1,20 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/empdb
-spring.datasource.username = root
-spring.datasource.password = root
+#spring.datasource.url = jdbc:mysql://localhost:3306/empdb
+#spring.datasource.username = root
+#spring.datasource.password = root
 
 # hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 
-server.port=9091
+#server.port=9091
 # to deploye the services to multiple instance use the below command
 #java -jar -Dserver.port=<PORT_NUMBER> <JAR_NAME>
 
 # Eureka config
 spring.application.name=DEPARTMENT-SERVICE
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+# Refer to centralized configuration
+spring.config.import=optional:configserver:http://localhost:8888
