--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/empdb
-spring.datasource.username = root
-spring.datasource.password = root
+#spring.datasource.url = jdbc:mysql://localhost:3306/empdb
+#spring.datasource.username = root
+#spring.datasource.password = root
 
 # hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 
-server.port=8081
+#server.port=8081
 
 # Eureka config
 spring.application.name=EMPLOYEE-SERVICE
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+# Refer to centralized configuration
+spring.config.import=optional:configserver:http://localhost:8888
