distributed tracing- sleuth & zipkin

--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.application.name=EMPLOYEE-SERVICE
 
 # Refer to centralized configuration
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
