--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # we can also see the logs
 logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+# we can add more properties as per our need
