--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.application.name=DEPARTMENT-SERVICE
 
 # Refer to centralized configuration
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
